This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

07-Sep-2004 (Lars Duening)  (3.3.5987)
  - (main, mregex.c, simulate.c) The H_REGEXP_PACKAGE hook can now accept
       the value 0 to fall back onto the package defined by the commandline
       arguments/configuration.

06-Sep-2004 (Lars Duening)  (3.3.597)
  - (ed.c, lex.c, mregex) Removed USE_PCRE remnants which among other things
       disrupted compilation (Bug #0000126).

04-Sep-2004 (Lars Duening)  (3.3.596)
  - (mregex, simulate.c, efuns.c) Implemented the concurrent use of both
       regexp packages.

04-Sep-2004 (Lars Duening)  (3.3.595)
  - (configure, main.c, simulate.c) Added the glue to select a default
       regexp package via commandline option or driver hook. The regexp
       logic itself is still unchanged.

04-Sep-2004 (Lars Duening)  (3.3.594)
  - (mregexp, ed.c) Changed the regexp implementation to use a pImpl
       idiom - this will allow to use traditional regexps and PCRE
       in parallel.

04-Sep-2004 (Lars Duening)  (3.3.593)
  - (comm.c, simulate.c) Added new input_to() flag 'INPUT_LOCAL' to switch
      only the driver side input mode between LINE and CHAR (Bug #0000124).

03-Sep-2004 (Lars Duening)  (3.3.592)
  - (interpret.c, simulate.c) Removed memory leaks (thanks, Gnomi!)
      (Bug #0000120).
  - (sprintf.c) Too large fieldsizes or precisions are caught (Bug #0000119).
  - (closure,  object.c) Some operator closures were saved using the wrong
       names, making the restoration impossible. Also, restoring closures
       within arrays wasn't robust enough (Bug #0000118).
  - (comm.c) Clarified the warnings for input_to modechanges for objects
       with telnet disabled (Bug #0000124).
  - (comm.c) When switching out of CHARMODE, the driver accidentally
       discarded any pending input lines after the current one. (thanks,
       Gnomi) (Bug #0000123)

01-Sep-2004 (Lars Duening)